# portable-io

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: cursor.rs  error.rs  impls.rs  lib.rs  prelude.rs  readbuf.rs  slice_util.rs  tests.rs
src/cursor/: tests.rs
src/error/: tests.rs
src/readbuf/: tests.rs
src/sys/: io.rs  io_default.rs  io_unix_iovec.rs  mod.rs
