[package]
name = "portable-io"
version = "0.0.3-dev"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brodycj/portable-io"
description = """"
A subset of Rust `std::io` functionality supported for `no-std`.
"""

[dependencies]
libc = { version = "0.2.169", optional = true, default-features = false }
memchr = { version = "2.7.4", default-features = false }
rustversion = "1.0.19"

[features]
# TODO: finer-grained feature options - XXX TBD ???
alloc = []
# XXX TBD DOCUMENT THAT ALL XXX TBD UNSTABLE FEATURES REQUIRE XXX CFG FLAG TO BUILD
# TODO: DOCUMENT AS UNSTABLE FEATURE with some MISSING FUNCTIONALITY (with known panics)
os-error = []
# TODO: DOCUMENT AS UNSTABLE FEATURE FOR UNIX PLATFORMS ONLY
unix-iovec = ["dep:libc"]
