[package]
name = "portable-io"
version = "0.0.3-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brodycj/portable-io"
description = """"
A subset of Rust `std::io` functionality supported for `no-std`.
"""

[features]
default = ["alloc"]
# ---
alloc = []
# ---
# UNSTABLE FEATURES
# NOTE: os-error feature is MISSING some FUNCTIONALITY, with KNOWN PANICS
os-error = []
# NOTE: unix-iovec is for UNIX PLATFORMS ONLY
unix-iovec = ["dep:libc"]

[dependencies]
libc = { version = "0.2.169", optional = true, default-features = false }
memchr = { version = "2.7.4", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(portable_io_unstable_all)',
]}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "portable_io_unstable_all"] # (all unstable CFG options)
